# utilities

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.bat  cppcheck-suppressions.txt  install.bat  pre-config.bat  run-cursor.bat  run-vscode.bat
cmake/: cppcheck.cmake  msh_utils-config.cmake.in  opencppcoverage.cmake
include/msh/utils/: JsonConfig.hpp  byte_array.hpp  file_io.hpp
src/: byte_array.cpp  file_io.cpp
tests/: CMakeLists.txt  byte_array_test.cpp  file_io_test.cpp  json_config_test.cpp
